# Fundamentals-of-distributed-processing

./: .gitignore
lab1/: CMakeLists.txt  blocking_communications  blocking_communications.cpp  matrix.cpp  non_blocking_communications  non_blocking_communications.cpp  producer_consumer.cpp  run.sh  run2.sh  run3.sh  run4.sh
lab_1/: matrix.cpp  non_blocking_communications.cpp  run.sh
